--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>로그인</title>
 </head>
 <body>
-    
+    <div class="login-container">
+        <h2>로그인</h2>
+        <form>
+            <input type="email" placeholder="이메일" required>
+            <input type="password" placeholder="비밀번호" required>
+            <div class="options">
+                <label><input type="checkbox">이메일 저장</label>
+                <a href="#">회원가입</a>
+            </div>
+            <button type="submit">로그인</button>
+        </form>
+    </div>
 </body>
 </html>
