--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <label><input type="checkbox">이메일 저장</label>
                 <a href="#">회원가입</a>
             </div>
-            <button type="submit">로그인</button>
+            <div class="button-container">
+                <button type="submit">로그인</button>
+            </div>
         </form>
     </div>
 </body>
